# learn-opengl

./: CMakeLists.txt  README.md
include/: Camera.hpp  GameObject.hpp  Shader.hpp
shaders/: basic.fs  basic.vs  texture.fs  texture.vs
src/: Camera.cpp  GameObject.cpp  Shader.cpp  glad.c  main.cpp
